--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "dotenv": "^6.0.0",
+    "profanity-censor": "^1.0.5",
     "querystring": "^0.2.0",
     "request": "^2.87.0"
   },
